Добавил версию products для планшета.

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,18 +1,15 @@
 <section class="products">
     <div class="products-wrap container">
-        <div class="products-title">
-            <h2 class="products-title-part-1">100% natural</h2>
-            <h3 class="products-title-part-2">products</h3>
-        </div>
+
+        <h2 class="products-title">100% natural</h2>
+        <h3 class="products-title subtitle">products</h3>
+
 
         <ul class="products-list">
 
             <li class="product">
 
-                <picture class="product-image">
-                    <source srcset="./images/icecream.png 1x, ./images/icecream@2x.png 2x" type="image/png">
-                    <img src="./images/icecream.png" width="250" alt="Ice Cream">
-                </picture>
+                <img class="product-image" srcset="./images/icecream.png 1x, ./images/icecream@2x.png 2x" src="./images/icecream.png" width="250" alt="Ice Cream" />
 
                 <ul class="product-info">
 
@@ -25,7 +22,7 @@
                     <li class="product-info-item">
                         <p class="product-info-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                             do
-                            eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                            eiusmod tempor incididunt ut labore et.</p>
                     </li>
                     <li class="product-info-item">
                         <a class="product-info-link" href="">
@@ -39,15 +36,12 @@
             </li>
             <li class="product">
 
-                <picture class="product-image">
-                    <source srcset="./images/icecoffee.png 1x, ./images/icecoffee@2x.png 2x" type="image/png">
-                    <img src="./images/icecoffee.png" width="250" alt="Ice Cream">
-                </picture>
+                <img class="product-image" srcset="./images/icecoffee.png 1x, ./images/icecoffee@2x.png 2x" src="./images/icecoffee.png" width="250" alt="Ice Coffee"/>
 
                 <ul class="product-info">
 
                     <li class="product-info-item">
-                        <p class="product-info-title">ice cream</p>
+                        <p class="product-info-title">ice coffee</p>
                     </li>
                     <li class="product-info-item">
                         <img class="dotts" src="./images/dotts.png" alt="" width="26">
@@ -55,7 +49,7 @@
                     <li class="product-info-item">
                         <p class="product-info-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                             do
-                            eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                            eiusmod tempor incididunt ut labore et.</p>
                     </li>
                     <li class="product-info-item">
                         <a class="product-info-link" href="">
@@ -69,15 +63,12 @@
             </li>
             <li class="product">
 
-                <picture class="product-image">
-                    <source srcset="./images/milkshakes.png 1x, ./images/milkshakes@2x.png 2x" type="image/png">
-                    <img src="./images/milkshakes.png" width="250" alt="Ice Cream">
-                </picture>
+                <img class="product-image" srcset="./images/milkshakes.png 1x, ./images/milkshakes@2x.png 2x" src="./images/milkshakes.png" width="250" alt="Milkshakes" />
 
                 <ul class="product-info">
 
                     <li class="product-info-item">
-                        <p class="product-info-title">ice cream</p>
+                        <p class="product-info-title">milkshakes</p>
                     </li>
                     <li class="product-info-item">
                         <img class="dotts" src="./images/dotts.png" alt="" width="26">
@@ -85,7 +76,7 @@
                     <li class="product-info-item">
                         <p class="product-info-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                             do
-                            eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                            eiusmod tempor incididunt ut labore et.</p>
                     </li>
                     <li class="product-info-item">
                         <a class="product-info-link" href="">
