--- a/src/sass/components/_sale.scss
+++ b/src/sass/components/_sale.scss
@@ -26,11 +26,18 @@
 }
 
 .contacts-card-list {
+  padding: 0;
+  margin: 0;
+
   display: block;
   width: 100%;
   margin-right: auto;
   margin-left: auto;
   box-sizing: border-box;
+
+  @media screen and (max-width: 767px) {
+    margin-bottom: 16px;
+  }
 
   @media screen and (min-width: 768px) {
     display: inline-flex;
