--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -462,7 +462,7 @@ img {
   padding-bottom: 40px;
 }
 
-.products img {
+img {
   position: absolute;
   top: -35%;
   padding-top: 31px;
@@ -470,13 +470,13 @@ img {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .products img {
+  img {
     top: -25%;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .products img {
+  img {
     top: -50%;
   }
 }
@@ -562,7 +562,7 @@ img {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #ffffff;
+  background-color: #fff;
   margin-top: 30px;
   margin-right: auto;
   margin-left: auto;
@@ -588,375 +588,6 @@ img {
   fill: #d41443;
 }
 
-.how-made {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  background: #FFF5F6;
-  padding: 125px 0px 97px 0px;
-  z-index: -1;
-}
-
-@media screen and (min-width: 768px) {
-  .how-made {
-    padding: 130px 0px 142px 0px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .how-made {
-    padding: 125px 0px 139px 0px;
-  }
-}
-
-.hw-title {
-  margin: 0 0 15px 0;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.17;
-  text-align: center;
-  text-transform: uppercase;
-  color: #ffa5ba;
-}
-
-@media screen and (min-width: 768px) {
-  .hw-title {
-    font-size: 26px;
-    line-height: 1.15;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hw-title {
-    font-size: 30px;
-    line-height: 1.13;
-  }
-}
-
-.hw-subtitle {
-  margin: 0;
-  font-weight: 400;
-  font-size: 34px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: #d41443;
-}
-
-@media screen and (min-width: 768px) {
-  .hw-subtitle {
-    font-size: 48px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hw-subtitle {
-    font-size: 58px;
-    line-height: 1.14;
-    letter-spacing: 0.06em;
-  }
-}
-
-.hw-title-box {
-  margin-bottom: 26px;
-  color: #d41443;
-}
-
-@media screen and (min-width: 768px) {
-  .hw-title-box {
-    margin-bottom: 50px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hw-title-box {
-    margin-bottom: 55px;
-  }
-}
-
-.hw-content-box {
-  margin-bottom: 39px;
-}
-
-@media screen and (min-width: 768px) {
-  .hw-content-box {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-bottom: 66px;
-    padding: 0 2px 0 5px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hw-content-box {
-    width: 1050px;
-    position: relative;
-    z-index: 5;
-    margin-bottom: 39px;
-    padding: 0;
-  }
-}
-
-.hw-main-content {
-  max-width: 220px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 46px;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.62;
-}
-
-@media screen and (min-width: 768px) {
-  .hw-main-content {
-    max-width: 340px;
-    margin: 50px 0 0 17px;
-    font-size: 14px;
-    line-height: 1.76;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hw-main-content {
-    max-width: 463px;
-    margin: 50px 0 0 17px;
-    font-size: 16px;
-    line-height: 1.76;
-    letter-spacing: 0.04em;
-  }
-}
-
-.hw-main-content-1 {
-  margin: 0;
-}
-
-.hw-main-content-2 {
-  margin: 30px 0 0 0;
-  color: #907e82;
-}
-
-@media screen and (min-width: 1200px) {
-  .hw-main-content-2 {
-    margin: 30px 0 0 0;
-    font-size: 14px;
-    line-height: 1.94;
-  }
-}
-
-.hw-main-content-3 {
-  margin: 33px 0 0 0;
-  color: #907e82;
-}
-
-@media screen and (min-width: 1200px) {
-  .hw-main-content-3 {
-    margin: 30px 0 0 0;
-    font-size: 14px;
-    line-height: 1.94;
-  }
-}
-
-.hw-btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 176px;
-  height: 44px;
-  padding-left: 37px;
-  padding-right: 37px;
-  margin-top: 17px;
-  margin-right: auto;
-  margin-bottom: 0px;
-  margin-left: 0px;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.29;
-  color: #d41443;
-  background: #ffffff;
-  border-radius: 22px;
-  cursor: pointer;
-  -webkit-transition-property: background;
-  transition-property: background;
-  -webkit-animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-          animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (min-width: 768px) {
-  .hw-btn {
-    margin-top: 62px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hw-btn {
-    margin-top: 45px;
-  }
-}
-
-.hw-btn::after {
-  display: inline-block;
-  content: '';
-  width: 8px;
-  height: 10px;
-  margin-left: 14px;
-  background-image: url("../images/how-made-img/Vector 1.svg");
-}
-
-.hw-btn:focus, .hw-btn:hover {
-  background: #ECEBEB;
-}
-
-.hw-card-list {
-  max-width: 230px;
-  padding: 0;
-}
-
-.hw-card-list li:not(:last-child) {
-  margin-bottom: 38px;
-}
-
-@media screen and (min-width: 768px) {
-  .hw-card-list {
-    max-width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .hw-card {
-    width: 180px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hw-card {
-    width: 330px;
-  }
-}
-
-.hw-card img {
-  margin-bottom: 16px;
-}
-
-@media screen and (min-width: 768px) {
-  .hw-card img {
-    margin-bottom: 36px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hw-card img {
-    margin-bottom: 40px;
-  }
-}
-
-.hw-card p {
-  margin: 0 0 15px 0;
-  font-family: "Titan One", cursive;
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 1.14;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: #d41443;
-}
-
-@media screen and (min-width: 768px) {
-  .hw-card p {
-    font-size: 48px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hw-card p {
-    font-size: 58px;
-  }
-}
-
-.hw-card b {
-  font-size: 12px;
-  line-height: 1.7;
-}
-
-@media screen and (min-width: 768px) {
-  .hw-card b {
-    font-size: 14px;
-    line-height: 1.74;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hw-card b {
-    font-size: 16px;
-    line-height: 1.76;
-  }
-}
-
-.how-made .container {
-  position: relative;
-}
-
-@media screen and (max-width: 767px) {
-  .cow-spray-bg {
-    position: absolute;
-    left: -20px;
-    top: 641px;
-    width: 320px;
-    height: 133px;
-    z-index: 0;
-    background-image: url(../images/how-made-img/bg-milk-sprays-mobile.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-  }
-}
-
-@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
-  .cow-spray-bg {
-    background-image: url(../images/how-made-img/bg-milk-sprays-mobile@2x.png);
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .cow-spray-bg {
-    position: absolute;
-    left: -157px;
-    top: 217px;
-    width: 1282px;
-    height: 534px;
-    z-index: 0;
-    background-image: url(../images/how-made-img/bg-milk-sprays-desktop.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-  }
-}
-
-@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
-  .cow-spray-bg {
-    background-image: url(../images/how-made-img/bg-milk-sprays-desktop@2x.png);
-  }
-}
-
-.gallery-main {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#fff5f6), color-stop(40%, #fff5f6), color-stop(40%, #ffffff), to(#ffffff));
-  background-image: linear-gradient(#fff5f6 0%, #fff5f6 40%, #ffffff 40%, #ffffff 100%);
-}
-
 .gallery {
   margin-left: auto;
   margin-right: auto;
@@ -965,7 +596,7 @@ img {
   background-image: url("../images/gallery/gallery@x1-mob-min.jpg");
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: top;
+  background-position: center;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1002,194 +633,6 @@ img {
   }
 }
 
-.reviews {
-  padding-top: 80px;
-  padding-bottom: 86px;
-  background-color: #ffffff;
-  text-align: center;
-}
-
-@media screen and (min-width: 768px) {
-  .reviews {
-    padding-top: 121px;
-    padding-bottom: 119px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .reviews {
-    padding-top: 123px;
-    padding-bottom: 132px;
-  }
-}
-
-.reviews-foto {
-  width: 85px;
-  height: 85px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #e1e1e1;
-  border-radius: 50%;
-}
-
-.reviews-commit {
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  background: #fafafa;
-  max-width: 280px;
-  margin-top: 29px;
-  margin-bottom: 30px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 30px;
-  text-align: center;
-  letter-spacing: 0.04em;
-  color: #000000;
-}
-
-.reviews-commit svg {
-  position: absolute;
-  z-index: 1;
-  left: 61px;
-  top: 28px;
-  width: 54px;
-  height: 40px;
-}
-
-@media screen and (min-width: 768px) {
-  .reviews-commit svg {
-    top: 30px;
-    left: 40px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .reviews-commit svg {
-    top: 32px;
-    left: 50px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .reviews-commit {
-    margin-top: 19px;
-    margin-bottom: 24px;
-    font-size: 14px;
-    max-width: 620px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .reviews-commit {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    font-size: 16px;
-    max-width: 926px;
-  }
-}
-
-.i {
-  padding-left: 50px;
-  padding-top: 43px;
-  padding-right: 50px;
-  padding-bottom: 26px;
-}
-
-@media screen and (min-width: 768px) {
-  .i {
-    padding-left: 60px;
-    padding-right: 36px;
-    padding-top: 47px;
-    padding-bottom: 28px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .i {
-    padding-left: 59px;
-    padding-right: 54px;
-    padding-bottom: 32px;
-  }
-}
-
-.i p {
-  max-width: 180px;
-  padding-left: 7px;
-  padding-right: 16px;
-  background-image: repeating-linear-gradient(to bottom, #ffffff00, #ffffff00 28px, #e1e1e1 29px, #e1e1e1 30px);
-  position: relative;
-  z-index: 1;
-  margin: 0px;
-}
-
-@media screen and (min-width: 768px) {
-  .i p {
-    max-width: 524px;
-    padding-left: 20px;
-    padding-right: 44px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .i p {
-    padding-left: 28px;
-    padding-right: 35px;
-    max-width: 813px;
-  }
-}
-
-.reviews-name {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.reviews-name span {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 186%;
-  margin-top: 18px;
-  margin-bottom: 30px;
-  color: #000000;
-}
-
-@media screen and (min-width: 768px) {
-  .reviews-name span {
-    font-size: 16px;
-    line-height: 168%;
-    margin-top: 14px;
-    margin-bottom: 35px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .reviews-name span {
-    margin-top: 15px;
-    font-size: 20px;
-    line-height: 186%;
-  }
-}
-
-.reviews-name-dots {
-  width: 32px;
-  height: 4px;
-  fill: #c7133e;
-}
-
-.reviews-name-dots-buttom {
-  height: 12px;
-}
-
 .contacts-card {
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #ffffff), color-stop(5%, #fff5f675), to(#fff5f675));
   background-image: linear-gradient(to bottom, #ffffff 5%, #fff5f675 5%, #fff5f675);
@@ -1210,12 +653,20 @@ img {
 }
 
 .contacts-card-list {
+  padding: 0;
+  margin: 0;
   display: block;
   width: 100%;
   margin-right: auto;
   margin-left: auto;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+@media screen and (max-width: 767px) {
+  .contacts-card-list {
+    margin-bottom: 16px;
+  }
 }
 
 @media screen and (min-width: 768px) {
