--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -209,7 +209,7 @@ a {
   .menu.is-open .header-menu {
     display: none;
   }
-  .header {
+  .page-header {
     position: absolute;
     left: 0;
     right: 0;
@@ -218,6 +218,18 @@ a {
     list-style: none;
     margin-bottom: 50px;
   }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .navigation-list {
+    max-width: 320px;
+    padding-left: 30px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 320px) {
   .nav-link {
     color: var(--white-color);
   }
@@ -349,7 +361,7 @@ a {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin: 0;
+    margin: 0 auto;
   }
   .nav-link {
     color: var(--grey-color);
@@ -2013,7 +2025,7 @@ li {
 }
 
 .teacher {
-  padding-top: 59px;
+  padding-top: 270px;
 }
 
 @media screen and (min-width: 768px) {
@@ -2021,13 +2033,13 @@ li {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    padding-top: 59px;
+    padding-top: 300px;
   }
 }
 
 @media screen and (min-width: 1344px) {
   .teacher {
-    padding-top: 200px;
+    padding-top: 330px;
   }
 }
 
@@ -2078,13 +2090,13 @@ li {
   .teacher-name {
     font-size: 30px;
     line-height: 37px;
-    margin-top: 237px;
-    padding-bottom: 15px;
+    padding-bottom: 25px;
   }
 }
 
 .teacher-list {
   margin-top: 20px;
+  padding-bottom: 15px;
 }
 
 .teacher-skills {
