--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -4,17 +4,17 @@
     <h2 class="about-us__title">About us</h2>
     <div class="about-us__text">
       <p>
-      Oh My Donut is the shop which adores tasty deserts and spend hours to create sophisticated
-      donuts which will save the world!
+        Oh My Donut is the shop which adores tasty deserts and spend hours to create sophisticated
+        donuts which will save the world!
       </p>
       <p>
-      Eva has been baking since she was six years old and over the last 49 years, she has created
-      hundreds of cakes for weddings and has baked for many celebrities. Eva and our shop have
-      received multiple awards & recognition for excellence.
-        <p>
+        Eva has been baking since she was six years old and over the last 49 years, she has created
+        hundreds of cakes for weddings and has baked for many celebrities. Eva and our shop have
+        received multiple awards & recognition for excellence.
       </p>
-      We are going to teach you how to cook with passion and sparkles in your eyes! We love what we
-      do and believe you will enjoy our cooking atmosphere!
+      <p class="text-hidden">
+        We are going to teach you how to cook with passion and sparkles in your eyes! We love what
+        we do and believe you will enjoy our cooking atmosphere!
       </p>
     </div>
   </div>
