--- a/src/sass/components/_about-us.scss
+++ b/src/sass/components/_about-us.scss
@@ -1,3 +1,9 @@
+p,
+h2 {
+  margin: 0;
+  padding: 0;
+}
+
 .about-us {
   display: flex;
 }
@@ -11,10 +17,18 @@
   font-size: 36px;
   line-height: 1.81;
   text-align: center;
-
   color: $text;
-
   margin-bottom: 10px;
+
+  @media screen and (min-width: 768px) and (max-width: 1280px) {
+    width: 76px;
+    height: 65px;
+    font-size: 24px;
+    line-height: 2.71;
+    font-family: Caveat Brush;
+    font-style: normal;
+    font-weight: normal;
+  }
 }
 
 .about-us__text {
@@ -26,6 +40,22 @@
   font-size: 18px;
   line-height: 1.22;
   color: $text;
+
+  @media screen and (min-width: 768px) and (max-width: 1280px) {
+    width: 336px;
+    height: 242px;
+    font-size: 16px;
+    line-height: 1.25;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+  }
+}
+
+.text-hidden {
+  @media screen and (max-width: 1279px) {
+    display: none;
+  }
 }
 
 .about-us__wrapper {
@@ -39,7 +69,13 @@
   width: 512px;
   height: 546.71px;
   z-index: 1;
-  transform: translate(2%, -2%);
+  margin-left: 71px;
+  transform: translate(2%, -8%);
+
+  @media screen and (min-width: 768px) and (max-width: 1280px) {
+    width: 329.65px;
+    height: 352px;
+  }
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: url('../images/pic@2x.png');
