--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -5,15 +5,13 @@
         <h2 class="program__title">Program</h2>
         <p class="program__text">Indulge in this immersive sweet treat experience with The Chef Donut Queen in her New York donut shop!</p>
         <ul class="program__list">
-            <li class="program__item"><p class="program__item-text">A stand up history of donuts</p>
-            </li>
-            <li class="program__item"> <p class="program__item-text">Make 3 donut flavors of your choice</p>
-                </li>
-           <li class="program__item"> Enjoy all-you-can-eat donuts</li>
-           <li class="program__item"> Cocktail pairings and coffee included</li>
-           <li class="program__item"> Photoshoot by professional photographer</li>
-           <li class="program__item"> Secret receipt of cooking from Eva</li>
-           <li class="program__item"> All products are included in the price</li>
+            <li class="program__item"><p class="program__item-text">A stand up history of donuts</p></li>
+            <li class="program__item"> <p class="program__item-text">Make 3 donut flavors of your choice</p></li>
+           <li class="program__item"> <p class="program__item-text">Enjoy all-you-can-eat donuts</p></li>
+           <li class="program__item"> <p class="program__item-text">Cocktail pairings and coffee included</p></li>
+           <li class="program__item"> <p class="program__item-text">Photoshoot by professional photographer</p></li>
+           <li class="program__item"> <p class="program__item-text">Secret receipt of cooking from Eva</p></li>
+           <li class="program__item"> <p class="program__item-text">All products are included in the price</p></li>
         </ul>
         <p class="program__text--hidden" >Come with your dear people and friends
         and you will spend an unforgettable time and
