--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container">
+  <div class="container container-footer">
     <ul class="social-icons">
       <li class="social-icons__item">
         <a href="" class="social-icons__link" target="_blank" rel="noopener noreferrer">
@@ -42,5 +42,8 @@
       </li>
     </ul>
     <span class="wheat"></span>
+    <div class="wheat-pc">
+      <img src="./images/wheat.png" alt="">
+    </div>
   </div>
 </footer>
