--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,11 +1,17 @@
 html {
   scroll-behavior: smooth;
+  @media screen and (min-width: $pc) {
+    overflow-x: hidden;
+  }
 }
 
 body {
   background-color: $white;
   color: $text;
   font-family: Montserrat;
+   @media screen and (min-width: $pc) {
+    overflow-x: hidden;
+  }
 }
 
 .container {
