--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -9,6 +9,7 @@
     padding: 0;
     width: 100%;
     height: 460.51px;
+    background-image: url(/images/bg-1.svg);
     background-size: cover;
     background-repeat: no-repeat;
     margin: 0 auto;
@@ -56,6 +57,7 @@
     height: 831px;
     left: 561px;
     top: -340px;
+    z-index: -20;
   }
 }
 
@@ -182,6 +184,8 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 0;
+  width: 25px;
+  height: 25px;
 
   border-radius: 50%;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -192,6 +196,11 @@
     background-color: $hover;
     fill: $white;
   }
+
+  @media screen and (min-width: $pc) {
+    width: 36px;
+    height: 36px;
+  }
 }
 
 .icon-twitter {
@@ -200,7 +209,6 @@
   @media screen and (min-width: $pc) {
     width: 24px;
     height: 19px;
-    margin-right: 12px;
   }
 }
 .icon-instagram {
@@ -209,7 +217,6 @@
   @media screen and (min-width: $pc) {
     width: 19px;
     height: 19px;
-    margin-right: 12px;
   }
 }
 .icon-facebook {
