--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -3,290 +3,5 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
-:root {
-  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  -webkit-transition: color 150ms var(--timing-function), background-color 150ms var(--timing-function);
-  transition: color 150ms var(--timing-function), background-color 150ms var(--timing-function);
-}
-
-body.light-theme {
-  background-color: #fff;
-  color: #333333;
-}
-
-body.dark-theme {
-  background-color: #333333;
-  color: #fff;
-}
-
-.toolbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  padding: 16px 24px;
-}
-
-/* THEME SWITCH */
-.theme-switch {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.theme-switch__icon {
-  color: currentColor;
-  height: 24px;
-  width: 24px;
-  margin-right: 8px;
-  margin-left: 8px;
-}
-
-.theme-switch__control {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  position: relative;
-  width: 64px;
-  height: 32px;
-  border-radius: 50em;
-  padding: 3px 0;
-}
-
-.theme-switch__toggle {
-  position: absolute;
-  left: 0;
-  top: 0;
-  margin: 0;
-  padding: 0;
-  opacity: 0;
-  height: 0;
-  width: 0;
-  pointer-events: none;
-}
-
-.theme-switch__track {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  color: transparent;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  background-color: #333;
-  border-radius: inherit;
-  z-index: 1;
-  cursor: pointer;
-}
-
-.theme-switch__marker {
-  position: relative;
-  background-color: #fff;
-  width: 26px;
-  height: 26px;
-  border-radius: 50%;
-  z-index: 2;
-  pointer-events: none;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-  -webkit-transform: translateX(3px);
-          transform: translateX(3px);
-  -webkit-transition: -webkit-transform 250ms var(--timing-function);
-  transition: -webkit-transform 250ms var(--timing-function);
-  transition: transform 250ms var(--timing-function);
-  transition: transform 250ms var(--timing-function), -webkit-transform 250ms var(--timing-function);
-}
-
-.theme-switch__toggle:checked + .theme-switch__track {
-  background-color: #d3d3d4;
-}
-
-.theme-switch__toggle:checked ~ .theme-switch__marker {
-  -webkit-transform: translateX(35px);
-          transform: translateX(35px);
-}
-
-.theme-switch__toggle:focus + .theme-switch__track,
-.theme-switch__toggle:active + .theme-switch__track {
-  -webkit-box-shadow: 0 0 0 3px #2196f3;
-          box-shadow: 0 0 0 3px #2196f3;
-}
-
-/* MENU */
-.menu {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  max-width: calc(100% - 64px);
-  margin-left: auto;
-  margin-right: auto;
-  display: grid;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  grid-gap: 24px;
-}
-
-.card {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: 100%;
-  padding-bottom: 8px;
-}
-
-.card__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 8px;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-}
-
-.card__image {
-  height: 300px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  max-width: 100%;
-}
-
-.card__name {
-  margin-top: 16px;
-  margin-bottom: 0;
-  font-size: 24px;
-  font-weight: 500;
-}
-
-.card__descr {
-  line-height: 1.5;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-}
-
-.card__price {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 24px;
-  font-size: 20px;
-}
-
-.card__price i {
-  margin-right: 8px;
-  font-size: 24px;
-}
-
-.card__reviews {
-  display: block;
-  margin-top: 16px;
-}
-
-.card__button {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 16px;
-  width: calc(100% - 16px);
-}
-
-.tag-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.tag-list__item {
-  padding: 4px 8px;
-  margin: 4px;
-  border-radius: 2px;
-  background-color: #3f51b5;
-  color: #fff;
-}
-
-.button {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  color: #fff;
-  background-color: #2196f3;
-  border: 0;
-  outline: 0;
-  padding: 8px 24px;
-  border-radius: 4px;
-  cursor: pointer;
-  -webkit-box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.05);
-          box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.05);
-  font: inherit;
-  font-weight: 500;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  -webkit-transition: background-color 250ms var(--timing-function);
-  transition: background-color 250ms var(--timing-function);
-}
-
-.button:hover {
-  -webkit-box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.15);
-  background-color: #1976d2;
-}
-
-.button__icon {
-  margin-right: 8px;
-}/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
+@import './_example.scss';
